manifests/apps/aria2/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: aria2
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged # needed for hostPath mount
