manifests/apps/aria2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aria2
  labels:
    app: aria2
    sablier.enable: "true"
    sablier.group: aria2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aria2
  template:
    metadata:
      labels:
        app: aria2
    spec:
      containers:
        - name: aria2
          image: hurlenko/aria2-ariang:1.3.13 # renovate: docker=hurlenko/aria2-ariang
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
          volumeMounts:
            - name: aria2-config
              mountPath: /aria2/conf
            - name: aria2-data
              mountPath: /aria2/data
      volumes:
        - name: aria2-config
          persistentVolumeClaim:
            claimName: aria2-config
        - name: aria2-data
          hostPath:
            path: /var/mnt/bulk-storage
            type: Directory
      dnsConfig:
        options:
          - name: ndots
            value: "1" # Fix for alpine DNS issue
