manifests/apps/aria2/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: aria2
spec:
  selector:
    app: aria2
  type: ClusterIP
  ports:
   - name: aria2
     port: 8080
     targetPort: 8080
