manifests/apps/aria2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aria2
  namespace: aria2
  labels:
    app: aria2
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    hajimari.io/enable: "true"
    hajimari.io/icon: streamline-plump-color:download-box-2-flat
    traefik.ingress.kubernetes.io/router.middlewares: aria2-oidc@kubernetescrd,aria2-sablier@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: aria2.homelab.olav.ninja
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aria2
                port:
                  name: aria2
  tls:
    - hosts:
        - aria2.homelab.olav.ninja
      secretName: aria2-tls-certificate
